backport `Road block palette` for 1.20.1 [Fabric]